@@ -9,6 +9,7 @@ Mantis ChangeLog
  * Fix #3333: Support PHPMailer v1.7x.
  * Fix #3334: Invalid links in bug reminder emails.
  * Fix #3353: History not updated in bug deletion email.
+ * Fix #3389: Problems upgrading existing users to administrator.
  * Sec #0000: Various Cross-Site Scripting vulnerabilities fixed (thanks to Paul Richards).
  * Languages: Updated French localisation.
 
